fix(charts): fix font-awesome aligning
closed #201

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -894,3 +894,13 @@ ul.messenger.messenger-spinner-active .messenger-spinner .messenger-spinner {
     }
   }
 }
+
+//
+// Font Awesome
+// --------------------------------------------------
+
+.circle {
+  .fa {
+    vertical-align: middle;
+  }
+}
